--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
+    "framer-motion": "^12.23.24",
     "heic2any": "^0.0.4",
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
@@ -49,6 +50,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0",
     "react-kakao-maps-sdk": "^1.1.27",
     "react-markdown": "^10.1.0",
     "react-quill": "^2.0.0",
