[DUTYMATE-156] refactor: Remove dependencies Mongo And add dependencies Dynamo
# Conflicts:
#	backend/src/main/java/net/dutymate/api/global/config/MongoConfig.java

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -40,7 +40,6 @@ dependencies {
 
     // Database & Persistence
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'com.mysql:mysql-connector-j'
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.2'
@@ -56,6 +55,8 @@ dependencies {
 
     // AWS SDK
     implementation 'software.amazon.awssdk:s3:2.29.52'
+    implementation 'software.amazon.awssdk:dynamodb:2.29.52'
+    implementation 'software.amazon.awssdk:dynamodb-enhanced:2.29.52'
 
     // XSS 방지
     implementation 'org.jsoup:jsoup:1.20.1'
