--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,31 +3,74 @@ services:
     image: mysql:latest
     container_name: mysql
     restart: always
-    ports:
-      - "3306:3306"
+    expose:
+      - "3306"
     environment:
       MYSQL_DATABASE: dutymate_db
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       TZ: Asia/Seoul
     volumes:
       - ./db/mysql/data:/var/lib/mysql
       - ./db/mysql/config:/etc/mysql/conf.d
+    mem_limit: 768m
+
   valkey:
     image: valkey/valkey:latest
     container_name: valkey
     restart: always
-    ports:
-      - "6379:6379"
+    expose:
+      - "6379"
     volumes:
       - ./db/valkey/data:/data
+    mem_limit: 128m
+
   mongodb:
     image: mongo:latest
     container_name: mongodb
     restart: always
-    ports:
-      - "27017:27017"
+    expose:
+      - "27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
     volumes:
       - ./db/mongodb/:/data/db
+    mem_limit: 640m
+
+  dutymate-api:
+    image: dutymate/dutymate-api:latest
+    container_name: dutymate-api
+    restart: always
+    expose:
+      - "8080"
+    env_file:
+      - .env
+    depends_on:
+      - mysql
+      - mongodb
+      - valkey
+    mem_limit: 768m
+
+  nginx:
+    image: nginx:alpine
+    container_name: nginx-proxy
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      - ./certbot/conf:/etc/letsencrypt:ro
+      - ./certbot/www:/var/www/certbot:ro
+    depends_on:
+      - dutymate-api
+    restart: unless-stopped
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+
