--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -13,8 +13,9 @@ server {
 }
 
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name api.dutymate.net;
 
     ssl_certificate /etc/letsencrypt/live/api.dutymate.net/fullchain.pem;
