--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,12 +39,26 @@ services:
       - ./db/mongodb/:/data/db
     mem_limit: 640m
 
-  dutymate-api:
+  api-01:
     image: dutymate/dutymate-api:latest
-    container_name: dutymate-api
+    container_name: api-01
     restart: always
     expose:
       - "8080"
+    env_file:
+      - .env
+    depends_on:
+      - mysql
+      - mongodb
+      - valkey
+    mem_limit: 768m
+
+  api-02:
+    image: dutymate/dutymate-api:latest
+    container_name: api-02
+    restart: always
+    expose:
+      - "8081"
     env_file:
       - .env
     depends_on:
