--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,3 +1,12 @@
+upstream api {
+    least_conn;
+
+    server api-01:8080 max_fails=3 fail_timeout=30s;
+    server api-02:8081 max_fails=3 fail_timeout=30s;
+
+    keepalive 32;
+}
+
 server {
     listen 80;
     listen [::]:80;
@@ -30,7 +39,7 @@ server {
     client_max_body_size 30m;
 
     location / {
-        proxy_pass http://dutymate-api:8080;
+        proxy_pass http://api;
         proxy_http_version 1.1;
         
         # Proxy headers
@@ -43,5 +52,10 @@ server {
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
+
+        # Automatically retry on next upstream server on error
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503;
+        proxy_next_upstream_tries 2;
+        proxy_next_upstream_timeout 10s;
     }
 }
